[package]
name = "common"
version = "0.1.0"
edition = "2024"

[features]
axum = ["dep:axum"]
price = ["dep:solana-client", "dep:solana-sdk", "dep:spl-token"]

[dependencies]
eyre = { version = "0.6.12" }
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = { version = "1.5.0" }
async-trait = "0.1.74"
tokio = { version = "1", features = ["full"] }


# axum
axum = { version = "0.8.1", features = ["macros"], optional = true }

# price
spl-token = { version = "7", features = ["no-entrypoint"] }
solana-client = { version = "2.1.15", optional = true }
solana-sdk = { version = "2.1.15", optional = true }
