[package]
name = "common"
version = "0.1.4"
edition = "2024"

[features]
axum = ["dep:axum", "dep:utoipa"]
price = ["dep:solana-client", "dep:solana-sdk", "dep:spl-token"]

[dependencies]
eyre = { version = "0.6.12" }
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = { version = "1.5.0" }
async-trait = "0.1.74"
tokio = { version = "1", features = ["full"] }
log = { version = "0.4.26", features = ["kv"] }
chrono = { version = "0.4.26", features = ["serde"] }
readonly = "0"
uuid = { version = "1.14.0", features = ["v4", "serde"] }
aes-gcm = "0.10.3"
sha2 = "0.10"
rand = "0.8.5"
base64 = "0.22.1"

# axum
axum = { version = "0.8.1", features = ["macros"], optional = true }
utoipa = { version = "5.3.1", features = [
  "axum_extras",
  "uuid",
], optional = true }

# price
spl-token = { version = "7", features = ["no-entrypoint"], optional = true }
solana-client = { version = "2.1.15", optional = true }
solana-sdk = { version = "2.1.15", optional = true }
